fix: Align Java args with upstream recommended settings from DS
Align Java args with upstream image.
Switch to G1GC for garbage collection is this is recommended since JDK17.

ref: FORGEOPS-5313